<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">PeanutStream2</string>
    <string name="odom_frame_id">/odom</string>
    <string name="image_frame_id">/base_image_link</string>
    <string name="depth_frame_id">/base_depth_link</string>
    <string name="parent_id">/map</string>
    <string name="image_topic">/image</string>
    <string name="depth_topic">/depth</string>
    <string name="button_name">Come to me</string>
    <string name="goal_topic">/move_base_simple/goal2</string>
    <string name="frequency_suffix">Hz</string>
    <string name="odom_frequency_title">Odom Update Rate</string>
    <string name="depth_frequency_title">Depth Update Rate</string>
    <string name="title_activity_splash_screen">SplashScreen</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="tango_prefix">/tango_brain_0</string>
</resources>
