<?xml version="1.0" encoding="utf-8"?>
<!--
* Copyright (c) 2014, University Of Massachusetts Lowell
* All rights reserved.
*
* Redistribution and use in source and binary forms, with or without
* modification, are permitted provided that the following conditions are met:
*
* 1. Redistributions of source code must retain the above copyright notice,
* this list of conditions and the following disclaimer.
* 2. Redistributions in binary form must reproduce the above copyright
* notice, this list of conditions and the following disclaimer in the
* documentation and/or other materials provided with the distribution.
* 3. Neither the name of the University of Massachusetts Lowell nor the names
* from of its contributors may be used to endorse or promote products
* derived this software without specific prior written permission.
*
* THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS "AS IS"
* AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE
* IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE
* ARE DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT OWNER OR CONTRIBUTORS BE
* LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR
* CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF
* SUBSTITUTE GOODS OR SERVICES; LOSS OF USE, DATA, OR PROFITS; OR BUSINESS
* INTERRUPTION) HOWEVER CAUSED AND ON ANY THEORY OF LIABILITY, WHETHER IN
* CONTRACT, STRICT LIABILITY, OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE)
* ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE
* POSSIBILITY OF SUCH DAMAGE.
* Author: Jordan Allspaw <jallspaw@cs.uml.edu>
-->
    <RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_height="fill_parent"
    android:layout_width="fill_parent">
    <HorizontalScrollView

    android:layout_height="fill_parent"
    android:layout_width="fill_parent"
    ></HorizontalScrollView>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true">

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="TF Parent Frame Id"
            android:textSize="24dp"
            android:id="@+id/positionTextView"
            android:layout_alignParentTop="true"
            android:layout_toEndOf="@+id/positionToggleButton" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="TF Child Frame Id"
            android:textSize="24dp"
            android:id="@+id/positionChildTextView"
            android:layout_alignTop="@+id/positionFrameEditText"
            android:layout_toEndOf="@+id/positionToggleButton" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/parent_id"
            android:textSize="24dp"
            android:id="@+id/positionEditText"
            android:layout_toEndOf="@+id/positionTextView"
            android:layout_alignParentTop="true"
            android:singleLine="true" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/odom_frame_id"
            android:textSize="24dp"
            android:id="@+id/positionFrameEditText"
            android:layout_toEndOf="@id/positionTextView"
            android:layout_below="@+id/positionEditText"
            android:layout_alignParentEnd="true"
            android:singleLine="true" />

        <ToggleButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textOn="Publish"
            android:textOff="Publish"
            android:enabled="true"
            android:id="@+id/positionToggleButton"
            android:layout_below="@+id/positionTextView"
            android:layout_alignParentStart="true" />

    </RelativeLayout>

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Depth Topic Name"
                android:textSize="24dp"
                android:id="@+id/depthTextView" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/depth_topic"
                android:textSize="24dp"
                android:id="@+id/depthEditText"
                android:layout_toEndOf="@+id/depthTextView"
                android:layout_alignParentEnd="true"
                android:singleLine="true" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/depth_frame_id"
                android:textSize="24dp"
                android:id="@+id/depthFrameEditText"
                android:layout_toEndOf="@+id/depthTextView"
                android:layout_alignBottom="@+id/depthToggleButton"
                android:layout_alignEnd="@+id/depthEditText"
                android:singleLine="true" />

            <ToggleButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textOn="Publish"
                android:textOff="Publish"
                android:enabled="true"
                android:id="@+id/depthToggleButton"
                android:layout_below="@+id/depthTextView"
                android:layout_alignParentStart="true" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_name"
                android:id="@+id/gotoButton"
                ></Button>

        </RelativeLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:layout_gravity="center_horizontal|bottom">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|bottom">

                <RelativeLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true">
                        <TextView android:id="@+id/odom_title"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@+string/odom_frequency_title"
                            android:textSize="24dp"
                            android:layout_alignParentLeft="true"/>
                        <TextView android:id="@+id/odom_rate"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@+string/frequency_suffix"
                            android:textSize="24dp"
                            android:layout_marginLeft="19dp"
                            android:layout_toRightOf="@+id/odom_title" />
                    </RelativeLayout>

                <RelativeLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true">
                    <TextView android:id="@+id/depth_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@+string/depth_frequency_title"
                        android:textSize="24dp"
                        android:layout_alignParentLeft="true" />
                    <TextView android:id="@+id/depth_rate"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@+string/frequency_suffix"
                        android:textSize="24dp"
                        android:layout_marginLeft="20dp"
                        android:layout_toRightOf="@+id/depth_title" />
                </RelativeLayout>
            </LinearLayout>
        </FrameLayout>
    </LinearLayout>

</RelativeLayout>